--- a/index.html
+++ b/index.html
@@ -10,10 +10,41 @@ seo:
   hide-from-google: false
 ---
 
-<!------------------------ Image Banner  ------------------------>
-<section class="padded">
-    <h1> MAKE EVERYTHING EDITABLE FROM THE BEGINNING - USE JEKYLL LOOPS, LAYOUTS AND INCLUDES TO MAKE IT EDITABLE FOR CLIENTS</h1>
-    <h1> USE DATA-SRC AND CLASS OF LAZY ON ANY IMG AND JUST CLASS OF LAZY ON ANY BG-IMAGE</h1>
+<section class="center capped-width-narrow padded">
+  <h1> Hatha Vinyasa Yoga</h1>
+  <br>
+  <p> Online und vor Ort </p>
+  <br>
+<!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/juliana-schuler/30min'});return false;" class="button">Buche Jetzt</a>
+<!-- Calendly link widget end -->
 </section>
 
+
+<section class="grid bg-image bg-welle">
+  <div class="pa1 text-white">
+    <h1>Hatha</h1>
+    <h1 class="h1-sub">Yoga</h1>
+  </div>
+  <div class="col-7"></div>
+  <div class="col-5-right right">
+    <div class="bg-cream padded grid-spaceAround">
+      <div class="col-9">
+        <h3> jeden Dienstag </h3>
+        <p> 18:00 Uhr </p>
+        <p style="font-size: 1.2rem;"> a yoga class inspired by an ocean breeze - flow to your heart. </p>
+        <p class="price" style="margin-bottom: 0;"> CHF 15 students </p>
+        <p class="price"> CHF 25 adults </p>
+        <br>
+<!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/juliana-schuler/30min'});return false;" class="button">Buche Jetzt</a>
+<!-- Calendly link widget end -->
+      </div>
+    </div>
+  </div>
+</section>
 
