--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ seo:
 </section>
 
 
-<section class="padded padded-b-0 xs-padded-0 padded-t-0 capped-width-v-narrow" id="contact">
+<section class="padded padded-b-0 xs-padded-0 padded-t-0 capped-width-v-narrow" id="kontakt">
   <div class="padded center">
     <p> Du möchtest gerne kommen, kannst aber an den vorhandenen Daten nicht? Dann schreib mir gerne, um welche Wochenzeiten es dir passen würde. </p>
   </div>
