--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ seo:
   social_image:
   twitter_card:
   keywords:
-  hide-from-google: false
+  hide-from-google: true
 ---
 
 <section class="center capped-width-narrow padded">
@@ -28,8 +28,8 @@ seo:
     <h1>Hatha</h1>
     <h1 class="h1-sub tgo">yoga</h1>
   </div>
-  <div class="col-7"></div>
-  <div class="col-5-right right">
+  <div class="col-7_sm-5_xs-12 xs-padded-c1"></div>
+  <div class="col-5_sm-7_xs-12-right right">
     <div class="bg-cream padded grid-spaceAround">
       <div class="col-9">
         <h3> jeden Dienstag </h3>
@@ -55,15 +55,15 @@ seo:
 
 
 <section class="grid bg-medium capped-width" id="about">
-  <div class="col-7">
-      <div class="col-9 padded text-white">
+  <div class="col-7_xs-12 grid">
+      <div class="col-9_xs-12 padded text-white">
         <div class="relative left" style="display: inline-block;">
           <h1 style="display: inline-block;"> About </h1><h3 class="tgo pa2"> me </h3>
         </div>
         <p> Hei, ich bin Juliana. Ich habe 2020 meine Online Yoga Ausbildung im Sivananda Yoga Zentrum im Hatha Yoga Bereich abgeschlossen.</p>
       </div>
   </div>
-  <div class="col-5-right right">
+  <div class="col-5_xs-12-right right">
     <div class="margin-c1">
       <img src="/images/sunmoonyogastudio-about-juliana-2.JPG" class="border-radius">
     </div>
@@ -97,7 +97,7 @@ seo:
 
 
 <footer class="capped-width grid-spaceAround">
-  <div class="col-5 padded">
+  <div class="col-5_xs-9 padded">
     <img src="/icons/sun-moon-primary-logo-black.svg" style="width: 100%;">
   </div>
   <div class="col-12 center policies">
