--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 title: Homepage
 seo:
-  title: 
-  description:
-  social_image:
-  twitter_card:
-  keywords:
-  hide-from-google: true
+  title: Hatha Vinyasa Yoga in Schwyz – Sun Moon Yoga Studio
+  description: Entdecke Hatha Vinyasa Yoga mit Juliana in Schwyz – online oder vor Ort. Sanfte Flows, bewusste Atmung und tiefe Entspannung. Jetzt Yogastunde ab CHF 15 buchen.
+  social_image: /images/sunmoonyogastudio-about-juliana-2.JPG
+  twitter_card: summary_large_image
+  keywords: Hatha Yoga Schwyz, Vinyasa Yoga Schwyz, Yoga Schwyz, Yoga Online Schweiz, Yoga Stunden Schwyz, Yoga Kurse Schwyz, Sun Moon Yoga Studio
+  hide-from-google: false
 ---
 
 <section class="center capped-width-narrow padded">
