--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@ seo:
   <br>
   <p> Online und vor Ort </p>
   <br>
-        <!-- Calendly link widget begin -->
-        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/juliana-schuler/hatha-vinyasa-yoga'});return false;"  class="button">Buche Jetzt</a>
-        <!-- Calendly link widget end -->
+  <a href="https://anny.co/book/hatha-vinyasa-yoga-oxsstbht1cl09cpi" class="button" target="_blank">Buche Jetzt</a>
 </section>
 
 
@@ -38,11 +34,7 @@ seo:
         <p class="price" style="margin-bottom: 0;"> CHF 15 students </p>
         <p class="price"> CHF 25 adults </p>
         <br>
-        <!-- Calendly link widget begin -->
-        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/juliana-schuler/hatha-vinyasa-yoga'});return false;"  class="button">Buche Jetzt</a>
-        <!-- Calendly link widget end -->
+        <a href="https://anny.co/book/hatha-vinyasa-yoga-oxsstbht1cl09cpi" class="button" target="_blank">Buche Jetzt</a>
       </div>
     </div>
   </div>
